[tool.poetry]
name = "elasticlogger"
version = "2.4.0"
description = "Standardized logger compatible with ElasticSearch"
license = "MIT"
readme = "README.md"
authors = ["Eduardo Aguilar <dante.aguilar41@gmail.com>"]
repository = "https://github.com/danteay/elasticlogger"
homepage = "https://github.com/danteay/elasticlogger"
documentation = "https://elasticlogger.readthedocs.io"
keywords = ['logger', 'elasticsearch', 'json']
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "^2021.5.30"
elasticsearch = "^7.14.1"
python-json-logger = "^2.0.1"
urllib3 = "^1.26.3"
setuptools = "^53.0.0"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pytest = "^6.2.5"
expects = "^0.9.0"
yapf = "^0.31.0"
pylint = "^2.11.1"
isort = "^5.9.3"
radon = "^5.1.0"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
pytest-cov = "^2.12.1"
testfixtures = "^6.18.1"
mamba = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
